k8s/app-manifest/j26-notifications/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: notification-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: notification-api
    spec:
      containers:
        - name: j26-notifications
          image: ghcr.io/scouterna/j26-notifications:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
      terminationGracePeriodSeconds: 30
