k8s/app-manifest/j26-notifications/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api
  labels:
    app: notification-api
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app: notification-api
