k8s/app-manifest/j26-notifications/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-client
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: notification-client
