k8s/app-manifest/j26-notifications/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-api
  labels:
    app: notification-api
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: /_services/notifications
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.j26.se
      http:
        paths:
          - path: /_services/notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-api
                port:
                  number: 8000
